modularized/vpc.tf
#creating vpc

resource "aws_vpc" "myfirstvpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "firstvpc"
  }
}
